<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZakerDemo</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <!--  -->
    <string name="_comp_callme">联系我们 </string>
    <string name="_user_discuss">用户反馈</string>
    <string name="_app_updata">版本更新</string>
    <!--  -->
    <string name="a_title_geli_sub">格力旗下</string>
    <string name="a_title_more">更   多</string>
    <!--  -->
    <string name="pull_to_refresh_pull_label">下载列表</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_tap_label">点击更新</string>
    <string name="user_click_info">点击查看详情</string>
    <string name="user_address_info">地    址:</string>
    <string name="user_email_info">邮    箱:</string>
    <string name="user_phone_info">电    话:</string>
    <string name="user_shop_spoce">经营范围:</string>
    <!--  -->
    <string name="company_info" formatted="false">\n\t\t珠海格力电器股份有限公司是目前全球最大的集研发、生产、销售、服务于一体的专业化空调企业，格力空调是中国空调行业唯一的"世界名牌"。
\n\n\t\t公司成立于1991年，现拥有珠海、重庆、合肥、郑州、武汉、石家庄、巴西、巴基斯坦等9大空调生产基地和珠海斗门1个配套生产基地，总占地面积680万平方米，员工总数达8万人，拥有10大系列1000多个品种规格的中央空调产品。2012年实现营业总收入1001.10亿元，同比增长19.87%；净利润73.80亿元，同比增长40.92%；纳税超过74亿元，连续12年上榜美国《财富》杂志“中国上市公司100强”。
\n\n\t\t公司始终坚持"自我发展、自主创新、自有品牌"的发展思路，坚持可持续发展，以工业精神推动专业化发展，以创新精神促进企业壮大，以诚信理念赢得市场认可，不断超越自我，回报社会。在激烈的市场竞争中，格力空调先后中标2008年"北京奥运媒体村"、2010年南非"世界杯"主场馆及多个配套工程、2010年广州亚运会14个比赛场馆、2014年俄罗斯索契冬奥会配套工程等国际知名空调招标项目，在国际舞台上赢得了广泛的知名度和影响力，成为从"中国制造"走向"中国创造"的典范。
"一个没有创新的企业，是一个没有灵魂的企业；一个没有核心技术的企业是没有脊梁的企业，一个没有脊梁的人永远站不起来。"展望未来，格力电器将以"缔造全球领先的空调企业，成就格力百年的世界品牌"为己任，为"中国创造"贡献力量，赢得世界尊重。"</string>
    <string name="company_top_info" formatted="false">\n\t\t成立于1991年的珠海格力电器股份有限公司是目前全球最大的集研发、生产、销售、服务于一体的国有控股专业化空调企业，2012年实现营业总收入1001.10亿元，纳税超过74亿元，连续12年上榜美国《财富》杂志“中国上市公司100强”。2013年，格力电器实现营业总收入1200.30亿元，同比增长19.90%；实现净利润108.13亿元，同比增长46.53%，继续保持稳健发展态势。
    格力空调，是中国空调业唯一的“世界名牌”产品，业务遍及全球100多个国家和地区。家用空调年产能超过6000万台(套)，商用空调年产能550万台(套)；2005年至今，格力空调产销量连续9年领跑全球，用户超过3亿。
    \n\n\t\t作为一家专注于空调产品的大型电器制造商，格力电器致力于为全球消费者提供技术领先、品质卓越的空调产品。在全球拥有珠海、重庆、合肥、郑州、武汉、石家庄、芜湖、巴西、巴基斯坦等9大生产基地，7万多名员工，至今已开发出包括家用空调、商用空调在内的20大类、400个系列、7000多个品种规格的产品，能充分满足不同消费群体的各种需求；拥有技术专利9000多项，其中发明专利2500多项，自主研发的超低温数码多联机组、永磁同步变频离心式冷水机组、多功能地暖户式中央空调、1赫兹变频空调、R290环保冷媒空调、无稀土变频压缩机、双级变频压缩机、光伏直驱变频离心机系统等一系列“国际领先”产品，填补了行业空白，改写了空调业百年历史。
    在激烈的市场竞争中，格力空调先后中标2008年“北京奥运媒体村”、2010年南非“世界杯”主场馆及多个配套工程、2010年广州亚运会14个比赛场馆、2014年俄罗斯索契冬奥会配套工程等国际知名空调招标项目，在国际舞台上赢得了广泛的知名度和影响力，引领“中国制造”走向“中国创造”。
    实干赢取未来，创新成就梦想。展望未来，格力电器将坚持专业化的发展战略，求真务实，开拓创新，以“缔造全球领先的空调企业，成就格力百年的世界品牌”为目标，为“中国梦”贡献更多的力量。"</string>
    <string name="company_aftersalesserver_info" formatted="false">"\n\t\t（一）包修内容
    在符合包修条件的前提下用户可享受免费修理、更换零配件的服务。

（二）包修期限
    本公司对用户购买的格力电器商用空调产品（除额定制热量小于8kw的热水机外）包修期自机组调试验收合格之日起计算，整机包修十八个月；对用户购买额定制热量小于8kw的热水机包修期自机组调试验收合格之日起计算，整机包修三年。机组调试验收日期均以《格力**机组安装确认凭证》或《格力商用空调用户信息卡》上的日期为准。

（三）包修凭证
    在包修期内的产品出现故障，用户须凭产品包修凭证（购买凭证、包修卡、商用空调进场或验收表）包修，如无包修凭证，不享受免费包修服务，特约服务网点可按本手册有关规定实行收费维修。

（四）包修范围
    包修期内的商用空调在正常使用情况下，因机组本身质量问题引起的维修，属免费包修范围。

（五）以下情况之一的不属于包修范围，但可实行收费维修:
    1、在机组运输、进场、就位、安装过程中造成的损坏,由提货、运输或施工单位负一切责任，具体责任追究由销售单位负责。
    2、在调试过程中，因调试单位调试不当造成的损坏,由调试单位负一切责任，具体责任追究由销售单位负责。
    3、调试完毕后,将相关资料（说明书、包修卡等）全部交付使用后,因使用单位不按随机使用说明书操作、维护、保养造成的损坏,由使用单位负一切责任。
    4、因使用单位或非格力电器授权服务单位移动、拆卸及维修造成的损坏,由使用单位负一切责任。
    5、无完整的包修凭证或包修凭证被涂改的。
    6、因不可抗拒的自然灾害或使用环境恶劣造成损坏的。
    7、处理品、已超过包修期的产品。 

"</string>
    <string name="product_save_info">"一、产品三包政策
1  包修政策
2013年度家用空调（制冷量小于或等于14000W）、除湿机包修政策为整机包修六年。
2005年1月1日之日起所购买的家用空调器整机包修六年。
2005年1月1日之前所购买的家用空调器的包修政策：按其当年的包修规定执行。
以下情况之一的不属于包修范围，特约服务网点可按本手册有关规定实行收费维修：
1.1消费者因使用、维护、保管不当造成损坏的；
1.2非格力电器指定的特约服务网点所安装、维修造成损坏的（包括消费者自行安装或拆动维修的）；
1.3无包修凭证及有效发票或有效购买凭证的；
1.4有效凭证、包修凭证不符或涂改的；
1.5因不可抗拒的自然灾害或使用环境恶劣造成损坏的；
1.6处理品、已超过包修期的产品。
2  包换政策
按国家规定的三包期限，在包修期内，符合下列条件，而且用户拒绝维修时，可以换机。
2.1产品自售出之日起15日内，发生主要性能故障，不能正常工作的，可以换机；
2.2按国家规定的三包期限，在包修期内，主要性能故障连续维修二次，不能正常工作的，可以换机，并按国家三包规定，重新起算包修期限（仅限更换部分）。
3  包退政策
按国家规定的三包期限，符合下列条件，而且用户拒绝维修或换机时，可以退机。
3.1产品自售出之日起10日内，发生主要性能故障，如压缩机故障、换热器内漏等,可以退机。
3.2自售出之日起一年以内，连续二次以上仍无法修好（指主要性能）用户坚持退机的。

二、免费安装政策
1  免费安装范围
格力电器家用空调，包括分体式、立柜式、吊顶式、天井式空调均实行免费安装。免费安装费用由特约服务网点按《安装费结算管理制度》要求向格力电器结算，不得向用户收取，但下列情况可与用户协商好后额外收费：
1.1需加长连接管；
1.2使用吊车、吊绳安装的；超过四楼在墙外进行施工（在阳台施工不另行收费）；
1.3在厚度超过120mm 的钢筋水泥墙上或在玻璃门窗上钻孔；超过1个以上的墙洞；
1.4拆除防盗网才能安装的；搬拆移位重新安装的；
1.5安装铁架等所有材料费。
1.6 安装位置距离网点所在地路程在20公里以内的，免收路费，超过20公里的，超出部分按单程每公里1元加收远程路费，但在销售达成成交意向时，未向用户明示的，不得收取远程路费，由销售单位负责对安装人员另行补贴。
2  下列情况实行收费安装：
2.1安装窗式空调器；
2.2移动空调钻排气口洞；
2.3无有效发票或有效购买凭证，又无免费安装凭证、无条形码的。由用户向购买商店协商，协商未果的应及时向销售公司申报情况。
 
尊敬的用户：
如果您对我公司安装维修过程中收费有任何投诉，欢迎您拨打格力电器售后服务价格举报电话：0756-8617555"</string>
    <string name="submit">确  定</string>
    <string name="cancel">取  消</string>

</resources>