<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinLayout.default_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 标题 -->

    <include layout="@layout/layout_top_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbars="none" >

        <!-- android:background="@drawable/corners_layout_bg" -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dip" >

            <!-- android:background="@drawable/mf_set_layout_bg" -->

            <LinearLayout
                android:id="@+id/ly_company_info"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_item_height_42"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dip"
                android:background="@drawable/a_linearlayout_selector"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/company_info"
                    android:textColor="@color/black"
                    android:textSize="17.0sp" />

                <ImageView
                    style="@style/ImageStyle.arrows_no_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/hello_world" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_user_discuss"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_item_height_42"
                android:layout_margin="4dip"
                android:background="@drawable/a_linearlayout_selector"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:gravity="fill_horizontal"
                    android:text="@string/_user_discuss"
                    android:textColor="@color/black"
                    android:textSize="17.0sp" />

                <ImageView
                    style="@style/ImageStyle.arrows_no_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/hello_world" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_app_updata"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/layout_item_height_42"
                android:layout_margin="4dip"
                android:background="@drawable/a_linearlayout_selector"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:gravity="fill_horizontal"
                    android:text="@string/_app_updata"
                    android:textColor="@color/black"
                    android:textSize="17.0sp" />

                <ImageView
                    style="@style/ImageStyle.arrows_no_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/hello_world" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>