<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/layout_padd_or_margin_5" >

    <!-- 以下的LinearLayout为常规的ListItem布局 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="55dip"
            android:layout_height="55dip" >

            <ImageView
                android:id="@+id/iv_usericon"
                style="@style/image_background_default"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="15dip"
                android:layout_height="15dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="3dip"
                android:layout_marginRight="3dip" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_username"
                style="@style/lv_left_top_item"
                android:ellipsize="end"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_usersign"
                style="@style/lv_left_bottom_item"
                android:layout_marginTop="@dimen/layout_padd_or_margin_5"
                android:ellipsize="end"
                android:text="aaaaaaaa"
                android:textSize="@dimen/text_size_15"
                android:singleLine="true" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_identity"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_gravity="center_vertical"
            android:cacheColorHint="#00000000"
            android:focusable="false"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_identity"
            style="@style/lv_left_bottom_item"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dip"
            android:layout_marginTop="2dip" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/lines"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center_vertical"
            android:longClickable="false" >
        </View>

        <ImageView
            android:id="@+id/iv_into"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:cacheColorHint="#00000000"
            android:focusable="false"
            android:scaleType="fitCenter"
            android:src="@drawable/detail_pressed" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hide_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_address_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_weburl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_item_height_42"
            android:background="@drawable/a_linearlayout_selector"
            android:drawableRight="@drawable/right"
            android:gravity="center_vertical"
            android:padding="@dimen/layout_padd_or_margin_5"
            android:textColor="@color/black"
            android:text="@string/user_click_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>