<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/mf_set_layout_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_item_height_42"
            android:background="@drawable/mf_layout_title_click"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <FrameLayout
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:layout_gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/image_background_default"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside" />

                <ProgressBar
                    android:id="@+id/iv_pro_bar1"
                    style="@style/image_background_default_pd"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone" />
            </FrameLayout>
            <!-- android:background="@drawable/dazong" -->

            <TextView
                android:id="@+id/tv_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="底锅电信旗舰店"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_15" >
            </TextView>
        </LinearLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_weight="0"
            android:background="@drawable/lines" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/image_background_default_goods" />

                <ProgressBar
                    android:id="@+id/iv_pro_bar2"
                    style="@style/image_background_default_goods_pd"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_detail"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="3dip"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingRight="3dip" >

                <TextView
                    android:id="@+id/tv_shop_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_phone_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15" >
                </TextView>

                <TextView
                    android:id="@+id/tv_shop_scope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="@string/user_shop_spoce"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_15" >
                </TextView>

                <TextView
                    android:id="@+id/tv_shop_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:singleLine="true"
                    android:text="@string/user_address_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_15" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ellipsize="none"
            android:focusable="false"
            android:singleLine="true"
            android:text="- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -" />

        <include layout="@layout/layout_bottom_bar" />
    </LinearLayout>

</LinearLayout>